# SOMA-X

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  README.md  README_osim_markers_to_soma_skeleton.md  RELEASE.md  agent.md  index.html  pyproject.toml  requirements.txt  setup.cfg  versions.json
.github/workflows/: pypi.yml  sphinx.yml
assets/: SOMA_neutral.npz  SOMA_procedural_transforms.json  SOMA_template_rig.usda  correctives_model.pt
docs/: Makefile  PRIVACY.md  conf.py  data_assets.md  index.md  procedural_control_format.md  requirements.txt
docs/api/: index.md  somalayer.rst
latest/: .buildinfo  BIAS.html  EXPLAINABILITY.html  PRIVACY.html  SAFETY_and_SECURITY.html  changelog.html  data_assets.html  genindex.html  index.html  model_card.html  objects.inv  procedural_control_format.html  py-modindex.html  search.html  searchindex.js
latest/_sources/: BIAS.md.txt  EXPLAINABILITY.md.txt  SAFETY_and_SECURITY.md.txt  model_card.md.txt
latest/_sources/api/: geometry.rst.txt  io.rst.txt  pose_inversion.rst.txt
latest/api/: geometry.html  index.html  io.html  pose_inversion.html  somalayer.html
soma/: __init__.py  _smpl_family_loader.py  _warp_utils.py  assets.py  correctives_model.py  identity_model.py  io.py  pose_inversion.py  pose_inversion_mhr.py  procedural_transforms.py  soma.py  units.py
soma/geometry/: __init__.py  _warp_init.py  align_vectors_warp.py  barycentric_interp.py  batched_skinning.py  chamfer_warp.py  fused_refit_warp.py  interpolate.py  laplacian.py  lbs.py  lbs_warp.py  rig_utils.py  skeleton_transfer.py  transforms.py
soma/smpl/: __init__.py  transfer.py
tests/: _optional_assets.py  test_barycentric_interp.py  test_batched_skinning.py  test_cli_logging.py  test_dataloader.py  test_device.py  test_geometry_transforms.py  test_mhr_pose_inversion.py  test_package_logging.py  test_pose_inversion.py  test_pose_mirror.py  test_procedural_transforms.py  test_rotation_alignment.py  test_skeleton_transfer.py  test_smpl_transfer.py  test_soma_layer.py  test_warp_kernel_cache.py
tools/: conversion_utils.py  convert_amass_to_soma.py  convert_bones_seed_bvh_to_soma.py  convert_gm_pca_to_npz.py  create_bvh_stick_mesh.py  create_osim_marker_mesh.py  create_soma_mesh_from_mhr_params.py  demo_soma_vis.py  download_assets.py  logging_utils.py  mhr2soma.py  pose_arm_markers_tpose.py  pose_converter.py  rig_soma_body_mesh.py  shape_convert.py  smpl2soma.py  soma_rig_assets.py  transform_marker_mesh.py  vis_pyrender.py
tools/ci/: check_release_version.py  deploy_doc.py  extract_release_notes.py
tools/soma_procedural_blender/: README.md  __init__.py  setup_blender_addon.py  smoke_test_blender.py
tools/soma_procedural_blender/soma_procedural_blender/: __init__.py  blender_reference.py  definition.py  evaluator.py
tools/soma_procedural_maya/: README.md  __init__.py  setup_maya_plugin.py
tools/soma_procedural_maya/plug-ins/: soma_procedural_maya_plugin.py
(+4 files in other folders)
