[metadata]
name = py-soma-x
version = 0.2.0
description = SOMA body layer
long_description = file: README.md
long_description_content_type = text/markdown
author = NVIDIA Corporation
license = Apache-2.0
license_file = LICENSE
url = https://github.com/NVlabs/SOMA-X
project_urls =
    Bug Tracker = https://github.com/NVlabs/SOMA-X/issues
    Source Code = https://github.com/NVlabs/SOMA-X
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    torch
    trimesh
    warp-lang
    rtree
    cholespy
    huggingface_hub
    usd-core

[options.extras_require]
smpl =
    smplx
anny =
    anny
    Pillow
dev =
    pytest
    ruff
    pre-commit
docs =
    sphinx>=7.0,<9.0
    nvidia-sphinx-theme>=0.0.9
    myst-parser>=3.0.0
    autodocsumm>=0.2.12
    sphinx-copybutton>=0.5.2
    sphinx-design>=0.6.0
demo =
    pyrender
    tqdm
    imageio[ffmpeg]
parquet =
    pandas
    # pyarrow 24.0.0 crashed Windows CI with 0xc0000005 during import.
    # Revisit this pin after a later PyArrow release fixes that path.
    pyarrow==23.0.1
all =
    smplx
    anny
    Pillow
    pandas
    # Keep in sync with the parquet extra above.
    pyarrow==23.0.1

[options.packages.find]
include =
    soma
    soma.*
